--- a/index.html
+++ b/index.html
@@ -6,11 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <title>Namangan 24</title>
 </head>
 
 <body>
-
+    <!-- SITE HEADER -->
+    <header class="site-header">
+        <div class="site-header-top">
+            <a href="index.html" class="logo">
+                <img src="/img/logo.svg" alt="logo">
+            </a>
+            <ul class="currency-list">
+                <li>
+                    <b>$</b>10137.2
+                </li>
+                <li>
+                    <b>P</b>138.26
+                </li>
+            </ul>
+        </div>
+    </header>
 </body>
 
 </html>
