--- a/index.html
+++ b/index.html
@@ -16,18 +16,33 @@
 <body>
     <!-- SITE HEADER -->
     <header class="site-header">
+        <!-- SITE-HEADER-TOP -->
         <div class="site-header-top">
-            <a href="index.html" class="logo">
-                <img src="/img/logo.svg" alt="logo">
-            </a>
-            <ul class="currency-list">
-                <li>
-                    <b>$</b>10137.2
-                </li>
-                <li>
-                    <b>P</b>138.26
-                </li>
-            </ul>
+            <div class="site-header-top-container container">
+                <a href="index.html" class="logo">
+                    <img src="/img/logo.svg" alt="logo">
+                </a>
+                <!-- CURRENCY-RATES -->
+                <ul class="currency-rates">
+                    <li class="currency-rates-item">
+                        <b>$ </b><span>1037.2</span>
+                    </li>
+                    <li class="currency-rates-item">
+                        <b>P </b><span>146.08</span>
+                    </li>
+                </ul>
+
+                <!-- GLOBAL-SEARCH-FORM -->
+
+                <!-- LANG-TOGGLE -->
+                <div class="lang-toggle">
+                    <a href="#" class="lang-toggle-link lang-toggle-link-active">UZ</a>
+                    <a href="#" class="lang-toggle-link">RU</a>
+                </div>
+
+                <!-- SITE-HEADER-FORM -->
+                <a href="#" class="button button-primary">Sing In</a>
+            </div>
         </div>
     </header>
 </body>
