--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 </ul>
 
                 <!-- GLOBAL-SEARCH-FORM -->
+                <form class="global-search-form" action="https://echo.htmlacademy.ru" method="GET">
+                    <input class="global-search-form-input" type="search" name="search" placeholder="Search"
+                        aria-label="Search" required>
+                </form>
 
                 <!-- LANG-TOGGLE -->
                 <div class="lang-toggle">
