--- a/index.html
+++ b/index.html
@@ -48,6 +48,26 @@
                 <a href="#" class="button button-primary">Sing In</a>
             </div>
         </div>
+        <div class="container">
+            <ul class="site-header-banner-list">
+                <li><a href="#" class="site-header-banner-link">Главное</a></li>
+                <li><a href="#" class="site-header-banner-link">Интересное</a></li>
+                <li><a href="#" class="site-header-banner-link">Экономика</a></li>
+                <li><a href="#" class="site-header-banner-link">Политика</a></li>
+                <li><a href="#" class="site-header-banner-link">Общество</a></li>
+                <li><a href="#" class="site-header-banner-link">Технологии</a></li>
+                <li><a href="#" class="site-header-banner-link">Спорт</a></li>
+                <li><a href="#" class="site-header-banner-link">Культура</a></li>
+                <li><a href="#" class="site-header-banner-link">Происшествия</a></li>
+                <li><a href="#" class="site-header-banner-link">Наука</a></li>
+            </ul>
+            <aside class="site-header-banner">
+                <a class="site-banner" href="#">
+                    <img class="site-banner-img" src="/img/shopme-banner.jpg" alt="reklama" width="1200" height="128"
+                        srcset="/img/shopme-banner.jpg 1x,/img/shopme-banner@2x.jpg 2x">
+                </a>
+            </aside>
+        </div>
     </header>
 </body>
 
