add notification cta

--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
                     </article>
                 </div>
             </section>
+            <!-- NOTIFICATION CTA -->
+            <div class="notification-cta">
+                <h3 class="notification-cta-text">Хотите быть в курсе свежих новостей?<br> Включите уведомления!
+                </h3>
+                <button class="button button-orange" type="button">Включит</button>
+            </div>
         </div>
     </main>
 </body>
