--- a/new-list.html
+++ b/new-list.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <!-- SITE-HEADER-FORM -->
-                <a href="#" class="button button-primary">Sing In</a>
+                <a href="contact.html" class="button button-primary">Sing In</a>
             </div>
         </div>
         <div class="container">
