--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="./css/styles.min.css">
+    <!-- <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="./css/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -21,7 +22,7 @@
         <div class="site-header-top">
             <div class="site-header-top-container container">
                 <a href="index.html" class="logo">
-                    <img src="/img/logo.svg" alt="logo">
+                    <img src="./img/logo.svg" alt="logo">
                 </a>
                 <!-- CURRENCY-RATES -->
                 <ul class="currency-rates">
@@ -52,15 +53,15 @@
         <div class="container">
             <ul class="site-header-banner-list">
                 <li><a href="index.html" class="site-header-banner-link">Главное</a></li>
-                <li><a href="new-list.html" class="site-header-banner-link">Интересное</a></li>
-                <li><a href="new-list.html" class="site-header-banner-link">Экономика</a></li>
-                <li><a href="new-list.html" class="site-header-banner-link">Политика</a></li>
-                <li><a href="new-list.html" class="site-header-banner-link">Общество</a></li>
-                <li><a href="new-list.html" class="site-header-banner-link">Технологии</a></li>
-                <li><a href="new-list.html" class="site-header-banner-link">Спорт</a></li>
-                <li><a href="new-list.html" class="site-header-banner-link">Культура</a></li>
-                <li><a href="new-list.html" class="site-header-banner-link">Происшествия</a></li>
-                <li><a href="new-list.html" class="site-header-banner-link">Наука</a></li>
+                <li><a href="news-list.html" class="site-header-banner-link">Интересное</a></li>
+                <li><a href="news-list.html" class="site-header-banner-link">Экономика</a></li>
+                <li><a href="news-list.html" class="site-header-banner-link">Политика</a></li>
+                <li><a href="news-list.html" class="site-header-banner-link">Общество</a></li>
+                <li><a href="news-list.html" class="site-header-banner-link">Технологии</a></li>
+                <li><a href="news-list.html" class="site-header-banner-link">Спорт</a></li>
+                <li><a href="news-list.html" class="site-header-banner-link">Культура</a></li>
+                <li><a href="news-list.html" class="site-header-banner-link">Происшествия</a></li>
+                <li><a href="news-list.html" class="site-header-banner-link">Наука</a></li>
             </ul>
         </div>
     </header>
@@ -102,7 +103,7 @@
     <footer class="site-footer">
         <div class="container footer-container">
             <a class="footer-logo-link" href="index.html">
-                <img class="footer-logo-img" src="/img/logo-white.svg" alt="logo">
+                <img class="footer-logo-img" src="./img/logo-white.svg" alt="logo">
             </a>
             <div class="footer-nav">
                 <a class="footer-nav-text" href="#">Воспроизводство, копирование, использование информации с сайта
@@ -140,10 +141,10 @@
                     Наши<br> социальные сети
                 </p>
                 <div class="social-media">
-                    <img src="/img/facebook.svg" alt="facebook" width="25" height="25">
-                    <img src="/img/telegram.svg" alt="telegram" width="25" height="25">
-                    <img src="/img/instagram.svg" alt="instagram" width="25" height="25">
-                    <img src="/img/youtube.svg" alt="youtube" width="25" height="25">
+                    <img src="./img/facebook.svg" alt="facebook" width="25" height="25">
+                    <img src="./img/telegram.svg" alt="telegram" width="25" height="25">
+                    <img src="./img/instagram.svg" alt="instagram" width="25" height="25">
+                    <img src="./img/youtube.svg" alt="youtube" width="25" height="25">
                 </div>
             </div>
         </div>
