add input required

--- a/contact.html
+++ b/contact.html
@@ -71,11 +71,11 @@
             <div class="contact-wrapper">
                 <form class="contact-form" action="https://echo.htmlacademy.ru/courses" method="get">
                     <div class="name-and-tel">
-                        <input type="text" name="name" placeholder="Имя">
-                        <input type="number" name="tel-num" placeholder="Номер телефона">
+                        <input type="text" name="name" placeholder="Имя" required>
+                        <input type="number" name="tel-num" placeholder="Номер телефона" required>
                     </div>
                     <div class="email">
-                        <input type="email" name="email" placeholder="Электронная почта">
+                        <input type="email" name="email" placeholder="Электронная почта" required>
                     </div>
                     <div class="message">
                         <textarea name="message" id="message" placeholder="Текст" width="696" height="180"></textarea>
